<resources>
    <string name="app_name">Pokedex</string>
    <string name="pokedex_entry">Pokedex No.</string>
    <string name="pokemon_name">Pokemon</string>
    <string name="pokemon_type">Type</string>
    <string name="pokemon_gen">Generation</string>
    <string name="pokemon_hp">HP</string>
    <string name="pokemon_atk">Attack</string>
    <string name="pokemon_def">Defense</string>
    <string name="pokemon_spatk">Sp.Atk</string>
    <string name="pokemon_spdef">Sp.Def</string>
    <string name="pokemon_spe">Speed</string>
    <string name="pokemon_stats">Stats</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="pref_language_list">
        <item>English (US)</item>
        <item>Italiano (Italian)</item>
        <item>Français (French)</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="settings_title">Settings</string>
    <string name="help_title">Help</string>
    <string name="theme_switch_key">dark_theme_switch</string>
    <string name="theme_title">Dark theme</string>
    <string name="theme_description">Use light or dark theme</string>
    <string name="language_list_key">language_list</string>
    <string name="language_setting">Language</string>
    <string name="language_description">Select the language you want the text to be displayed as</string>
    <string name="battle_cry_key">battle_cry_key</string>
    <string name="cry_switch_title">Auto-play cry</string>
</resources>
