<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_language_list"
        android:entryValues="@array/pref_language_list_values"
        android:key="@string/language_list_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/language_setting"
        android:summary="@string/language_description"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/theme_switch_key"
        android:summary="@string/theme_description"
        android:title="@string/theme_title" />

    <SwitchPreference
        android:id="@+id/autoCry"
        android:defaultValue="true"
        android:key="@string/battle_cry_key"
        android:summary="Play battle cry when opening a Pokemon Activity"
        android:title="@string/cry_switch_title" />

</PreferenceScreen>
