<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bgoodfellow.pokedex.PokemonActivity">

    <TextView
        android:id="@+id/tvEntryResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_toStartOf="@+id/imageView"
        android:text="TextView"
        android:layout_marginRight="4sp"
        android:textAlignment="textEnd"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvNameResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="TextView"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNameResult"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/pokemon_type"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvTypeResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTypeResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/pokemon_gen"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvGenResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGenResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/pokemon_stats"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="70sp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_hp"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvHPResult"
                android:layout_width="60sp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="8sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="70sp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_atk"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvAtkResult"
                android:layout_width="60sp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="8sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="70sp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_def"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvDefResult"
                android:layout_width="60sp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="8sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="70sp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_spatk"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvSpAtkResult"
                android:layout_width="60sp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="8sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="70sp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_spdef"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvSpDefResult"
                android:layout_width="60sp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="8sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="60sp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_spe"
                android:textAlignment="center"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvSpeResult"
                android:layout_width="60sp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="8sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
